--- a/textmetricsindex.html
+++ b/textmetricsindex.html
@@ -34,7 +34,7 @@
             --container-bg-color: #1e1e1e;
             --input-bg-color: #2e2e2e;
             --tooltip-bg-color: #333;
-            --card-bg-color: #2a2a2a; /* Slightly lighter color for the cards */
+            --card-bg-color: #2a2a2a;
         }
 
         body {
