--- a/textmetricsindex.html
+++ b/textmetricsindex.html
@@ -741,7 +741,7 @@
             }
         });
 
-        const apiKey = process.env.OPENAI_API_KEY;
+        const apiKey = "API_KEY_PLACEHOLDER"; // Placeholder to be replaced during deployment
 
         document.getElementById('calculate-button').addEventListener('click', calculateSimilarity);
         document.getElementById('reset-button').addEventListener('click', resetFields);
