changes made to textmetrics and created new function for security

--- a/textmetricsindex.html
+++ b/textmetricsindex.html
@@ -740,8 +740,6 @@
                 updateChart('textGenEvaluationChart', getDefaultTextGenEvaluationData());
             }
         });
-
-        const apiKey = "API_KEY_PLACEHOLDER"; // Placeholder to be replaced during deployment
         
         document.getElementById('calculate-button').addEventListener('click', calculateSimilarity);
         document.getElementById('reset-button').addEventListener('click', resetFields);
@@ -856,16 +854,12 @@
         }
 
         async function getEmbedding(text) {
-            const response = await fetch('https://api.openai.com/v1/embeddings', {
+            const response = await fetch('/.netlify/functions/getEmbedding', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${apiKey}`
                 },
-                body: JSON.stringify({
-                    input: text,
-                    model: 'text-embedding-ada-002'
-                })
+                body: JSON.stringify({ text }),
             });
 
             if (!response.ok) {
